--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,18 @@ ul {
 
 .menu-items {
     display: flex;
+    list-style-type: none;
 }
 
 .menu-items a {
     padding: 15px;
     font-size: 16px;
     display: block;
+
+}
+
+.menu-items a:hover {
+    color: #1abc9c;
 }
 
 .profile {
@@ -71,7 +77,8 @@ ul {
 }
 
 .portfolio {
-    width: 1200px;
+    width: 80%;
+    max-width: 1200px;
     height: 100%;
     margin: 0 auto;
 }
@@ -93,5 +100,55 @@ ul {
     width: 330px;
     height: 240px;
     margin: 20px;
+    cursor: pointer;
     border-radius: 10px;
+}
+
+/* seção para layout responsivo */
+
+@media (max-width: 1000px) {
+    header {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    nav {
+        display: block;
+        text-align: center;
+        width: 90%;
+    }
+
+    .menu-items {
+        justify-content: center;
+        padding: 0;
+    }
+
+    .navbar-brand {
+        font-size: 25px;
+    }
+
+    .profile-title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 550px) {
+    .navbar-brand {
+        font-size: 25px;
+        display: block;
+        text-align: left;
+        padding-left: 30px;
+    }
+
+    .profile-description {
+        font-size: 20px;
+    }
+
+    .portfolio-title {
+        font-size: 40px;
+    }
+
+    .menu-items a {
+        font-size: 14px;
+    }
 }
